tests/NormalTests/paczka1/fuzzy1/20629962.err
Error in line 6: vK6m S86 82,5
Error in line 11: 46OiF5Hxh A251 3|,3
Error in line 5: S108 S86 250,8
Error in line 7: Lyoq04Sy S108 76,1
Error in line 10: 46OiF5Hxh A372 28,7
Error in line 19: 46OiF5Hxh A251 23,1
Error in line 21: vK6m A372 158,6
Error in line 27: Lyoq04Sy A372 69,7
